COP-4313 Remove preview note and add changelog for categoryIds and customerSegmentIds in product response

--- a/products-labels-and-brands/product-service/api-reference/api.yml
+++ b/products-labels-and-brands/product-service/api-reference/api.yml
@@ -251,6 +251,12 @@ paths:
                     relatedItems:
                       - refId: 631c6adac2d4ea73be34f0d1
                         type: ACCESSORY
+                    customerSegmentIds:
+                      - 689591c74ac99162678ae78f
+                      - 689591c74ac99162678ae78g
+                    categoryIds:
+                      - 631c6adac2d4ea73be34f0d4
+                      - 631c6adac2d4ea73be34f0d5
                     mixins:
                       productCustomAttributes:
                         pricingMeasurePrice: 13
@@ -299,6 +305,12 @@ paths:
                         amount: 1
                       - id: 53a358901b2e9dd2718b5c13
                         amount: 1
+                    customerSegmentIds:
+                      - 689591c74ac99162678ae78f
+                      - 689591c74ac99162678ae78g
+                    categoryIds:
+                      - 631c6adac2d4ea73be34f0d4
+                      - 631c6adac2d4ea73be34f0d5
                     mixins:
                       productCustomAttributes:
                         pricingMeasurePrice: 13
@@ -353,6 +365,12 @@ paths:
                         - key: M
                         - key: L
                         - key: XL
+                    customerSegmentIds:
+                      - 689591c74ac99162678ae78f
+                      - 689591c74ac99162678ae78g
+                    categoryIds:
+                      - 631c6adac2d4ea73be34f0d4
+                      - 631c6adac2d4ea73be34f0d5
                     mixins:
                       productCustomAttributes:
                         pricingMeasurePrice: 13
@@ -394,6 +412,12 @@ paths:
                     relatedItems:
                       - refId: 631c6adac2d4ea73be34f0d1
                         type: ACCESSORY
+                    customerSegmentIds:
+                      - 689591c74ac99162678ae78f
+                      - 689591c74ac99162678ae78g
+                    categoryIds:
+                      - 631c6adac2d4ea73be34f0d4
+                      - 631c6adac2d4ea73be34f0d5
                     mixins:
                       productTemplateAttributes:
                         color: RED
@@ -1065,6 +1089,12 @@ components:
                   relatedItems:
                     - refId: 631c6adac2d4ea73be34f0d1
                       type: ACCESSORY
+                  customerSegmentIds:
+                    - 689591c74ac99162678ae78f
+                    - 689591c74ac99162678ae78g
+                  categoryIds:
+                    - 631c6adac2d4ea73be34f0d4
+                    - 631c6adac2d4ea73be34f0d5
                   mixins:
                     productCustomAttributes:
                       pricingMeasurePrice: 13
@@ -1113,6 +1143,12 @@ components:
                       amount: 1
                     - id: 53a358901b2e9dd2718b5c13
                       amount: 1
+                  customerSegmentIds:
+                    - 689591c74ac99162678ae78f
+                    - 689591c74ac99162678ae78g
+                  categoryIds:
+                    - 631c6adac2d4ea73be34f0d4
+                    - 631c6adac2d4ea73be34f0d5
                   mixins:
                     productCustomAttributes:
                       pricingMeasurePrice: 13
@@ -1167,6 +1203,12 @@ components:
                       - key: M
                       - key: L
                       - key: XL
+                  customerSegmentIds:
+                    - 689591c74ac99162678ae78f
+                    - 689591c74ac99162678ae78g
+                  categoryIds:
+                    - 631c6adac2d4ea73be34f0d4
+                    - 631c6adac2d4ea73be34f0d5
                   mixins:
                     productCustomAttributes:
                       pricingMeasurePrice: 13
@@ -1208,6 +1250,12 @@ components:
                     - refId: 631c6adac2d4ea73be34f0d1
                       type: ACCESSORY
                   parentVariantId: 545b4e3dfaee4c10def3db24
+                  customerSegmentIds:
+                    - 689591c74ac99162678ae78f
+                    - 689591c74ac99162678ae78g
+                  categoryIds:
+                    - 631c6adac2d4ea73be34f0d4
+                    - 631c6adac2d4ea73be34f0d5
                   mixins:
                     productVariantAttributes:
                       color: RED
@@ -2328,18 +2376,12 @@ components:
               $ref: '#/components/schemas/productMetadataGet'
             customerSegmentIds:
               type: array
-              description: |-
-                Customer segment IDs assigned to the product.
-
-                **NOTE**: This is a preview field and it is not fully operational yet.
+              description: Customer segment IDs assigned to the product.
               items:
                 type: string
             categoryIds:
               type: array
-              description: |-
-                Category IDs assigned to the product.
-
-                **NOTE**: This is a preview field and it is not fully operational yet.
+              description: Category IDs assigned to the product.
               items:
                 type: string
     basicProductsArray:
@@ -2421,18 +2463,12 @@ components:
               $ref: '#/components/schemas/productMetadataGet'
             customerSegmentIds:
               type: array
-              description: |-
-                Customer segment IDs assigned to the product.
-
-                **NOTE**: This is a preview field and it is not fully operational yet.
+              description: Customer segment IDs assigned to the product.
               items:
                 type: string
             categoryIds:
               type: array
-              description: |-
-                Category IDs assigned to the product.
-
-                **NOTE**: This is a preview field and it is not fully operational yet.
+              description: Category IDs assigned to the product.
               items:
                 type: string
     bundleProductsArray:
@@ -2510,18 +2546,12 @@ components:
               $ref: '#/components/schemas/productMetadataGet'
             customerSegmentIds:
               type: array
-              description: |-
-                Customer segment IDs assigned to the product.
-
-                **NOTE**: This is a preview field and it is not fully operational yet.
+              description: Customer segment IDs assigned to the product.
               items:
                 type: string
             categoryIds:
               type: array
-              description: |-
-                Category IDs assigned to the product.
-
-                **NOTE**: This is a preview field and it is not fully operational yet.
+              description: Category IDs assigned to the product.
               items:
                 type: string
     parentVariantProductsArray:
@@ -2601,18 +2631,12 @@ components:
               $ref: '#/components/schemas/variantProductMetadataGet'
             customerSegmentIds:
               type: array
-              description: |-
-                Customer segment IDs assigned to the product.
-
-                **NOTE**: This is a preview field and it is not fully operational yet.
+              description: Customer segment IDs assigned to the product.
               items:
                 type: string
             categoryIds:
               type: array
-              description: |-
-                Category IDs assigned to the product.
-
-                **NOTE**: This is a preview field and it is not fully operational yet.
+              description: Category IDs assigned to the product.
               items:
                 type: string
     variantProductsArray:
