Fix API documentation inconsistencies in api.yml

--- a/configuration/configuration-service/api-reference/api.yml
+++ b/configuration/configuration-service/api-reference/api.yml
@@ -818,9 +818,9 @@ components:
         - $ref: '#/components/schemas/BaseConfiguration'
         - type: object
           properties:
-            id:
+            _id:
               type: string
-              description: Client configuration unique identifier.
+              description: The client configuration unique identifier.
               minLength: 1
             client:
               type: string
