--- a/companies-and-customers/customer-segments/api-reference/api.yml
+++ b/companies-and-customers/customer-segments/api-reference/api.yml
@@ -306,7 +306,8 @@ paths:
       operationId: POST-customer-segment-create-segments-bulk
       description: |
         
-        Creates multiple customer segments.
+        Creates multiple customer segments. The maximum batch size is 200.
+
         ### Required scopes
         *  `customersegment.segment_manage` - required to create customer segments
       requestBody:
@@ -347,6 +348,9 @@ paths:
       description: |
         
         Performs the `UPSERT` operation for multiple customer segments. If a segment with specified ID exists in the system, then it is updated. If it doesn't exist, a new customer segment is created.
+
+        The maximum batch size is 200.
+
         ### Required scopes
         *  `customersegment.segment_manage` - required to update customer segments
       requestBody:
@@ -388,7 +392,8 @@ paths:
         - $ref: '#/components/parameters/forceDelete'
       description: |
         
-        Removes multiple customer segments.
+        Removes multiple customer segments. The maximum batch size is 200.
+
         ### The IDs of customer segments for deletion should be defined in the request body as an array of strings.
         #### Example: `["firstId", "secondId", "thirdId"]`
         
@@ -735,7 +740,8 @@ paths:
       operationId: PUT-customer-segment-update-customers-bulk
       description: |
         
-        Performs `UPSERT` operation. Updates multiple customer assignments to a customer segment.
+        Performs `UPSERT` operation. Updates multiple customer assignments to a customer segment. The maximum batch size is 200.
+
         ### Required scopes
         *  `customersegment.segment_manage` - required to add and modify customer assignments
       requestBody:
@@ -773,7 +779,8 @@ paths:
       operationId: DELETE-customer-segment-remove-customers-bulk
       description: |
         
-        Removes multiple customer assignments to a customer segment.
+        Removes multiple customer assignments to a customer segment. The maximum batch size is 200.
+
         ### The request body for this endpoint is array of objects with `customerId` and `legalEntityId` fields.
         #### Example: `[{"customerId": "firstCustomerId", "legalEntityId": "firstLegalEntityId"}, {"customerId": "secondCustomerId", "legalEntityId": "secondLegalEntityId"}, {"customerId": "thirdCustomerId", "legalEntityId": "thirdLegalEntityId"}]`
         ### Required scopes
@@ -1056,7 +1063,8 @@ paths:
       operationId: PUT-customer-segment-update-items-bulk
       description: |
         
-        Performs `UPSERT` operation. Updates multiple item assignments to a customer segments.
+        Performs `UPSERT` operation. Updates multiple item assignments to a customer segments. The maximum batch size is 200.
+
         ### Required scopes
         *  `customersegment.segment_manage` - required to add and modify item assignments
       requestBody:
@@ -1094,7 +1102,8 @@ paths:
       operationId: DELETE-customer-segment-remove-items-bulk
       description: |
         
-        Removes multiple customer segments item assignments.
+        Removes multiple customer segments item assignments. The maximum batch size is 200.
+
         * The IDs of items should be defined in the request body as an array of strings.
         Example: `["firstItemId", "secondItemId", "thirdItemId"]`
         ### Required scopes
