COP-4313 Remove preview note and add changelog for categoryIds and customerSegmentIds in product response (#246)
* Fix categoryIds and customerSegmentIds in API ref

* COP-4313 Remove preview note and add changelog for categoryIds and customerSegmentIds in product response

---------

Co-authored-by: Maciej Rzeznik <m.rzeznik@emporix.com>
Co-authored-by: MarzenaCudecka <m.cudecka@emporix.com>

--- a/products-labels-and-brands/product-service/api-reference/api.yml
+++ b/products-labels-and-brands/product-service/api-reference/api.yml
@@ -251,6 +251,12 @@ paths:
                     relatedItems:
                       - refId: 631c6adac2d4ea73be34f0d1
                         type: ACCESSORY
+                    customerSegmentIds:
+                      - 689591c74ac99162678ae78f
+                      - 689591c74ac99162678ae78g
+                    categoryIds:
+                      - 631c6adac2d4ea73be34f0d4
+                      - 631c6adac2d4ea73be34f0d5
                     mixins:
                       productCustomAttributes:
                         pricingMeasurePrice: 13
@@ -299,6 +305,12 @@ paths:
                         amount: 1
                       - id: 53a358901b2e9dd2718b5c13
                         amount: 1
+                    customerSegmentIds:
+                      - 689591c74ac99162678ae78f
+                      - 689591c74ac99162678ae78g
+                    categoryIds:
+                      - 631c6adac2d4ea73be34f0d4
+                      - 631c6adac2d4ea73be34f0d5
                     mixins:
                       productCustomAttributes:
                         pricingMeasurePrice: 13
@@ -353,6 +365,12 @@ paths:
                         - key: M
                         - key: L
                         - key: XL
+                    customerSegmentIds:
+                      - 689591c74ac99162678ae78f
+                      - 689591c74ac99162678ae78g
+                    categoryIds:
+                      - 631c6adac2d4ea73be34f0d4
+                      - 631c6adac2d4ea73be34f0d5
                     mixins:
                       productCustomAttributes:
                         pricingMeasurePrice: 13
@@ -394,6 +412,12 @@ paths:
                     relatedItems:
                       - refId: 631c6adac2d4ea73be34f0d1
                         type: ACCESSORY
+                    customerSegmentIds:
+                      - 689591c74ac99162678ae78f
+                      - 689591c74ac99162678ae78g
+                    categoryIds:
+                      - 631c6adac2d4ea73be34f0d4
+                      - 631c6adac2d4ea73be34f0d5
                     mixins:
                       productTemplateAttributes:
                         color: RED
@@ -1077,6 +1101,12 @@ components:
                   relatedItems:
                     - refId: 631c6adac2d4ea73be34f0d1
                       type: ACCESSORY
+                  customerSegmentIds:
+                    - 689591c74ac99162678ae78f
+                    - 689591c74ac99162678ae78g
+                  categoryIds:
+                    - 631c6adac2d4ea73be34f0d4
+                    - 631c6adac2d4ea73be34f0d5
                   mixins:
                     productCustomAttributes:
                       pricingMeasurePrice: 13
@@ -1125,6 +1155,12 @@ components:
                       amount: 1
                     - id: 53a358901b2e9dd2718b5c13
                       amount: 1
+                  customerSegmentIds:
+                    - 689591c74ac99162678ae78f
+                    - 689591c74ac99162678ae78g
+                  categoryIds:
+                    - 631c6adac2d4ea73be34f0d4
+                    - 631c6adac2d4ea73be34f0d5
                   mixins:
                     productCustomAttributes:
                       pricingMeasurePrice: 13
@@ -1179,6 +1215,12 @@ components:
                       - key: M
                       - key: L
                       - key: XL
+                  customerSegmentIds:
+                    - 689591c74ac99162678ae78f
+                    - 689591c74ac99162678ae78g
+                  categoryIds:
+                    - 631c6adac2d4ea73be34f0d4
+                    - 631c6adac2d4ea73be34f0d5
                   mixins:
                     productCustomAttributes:
                       pricingMeasurePrice: 13
@@ -1220,6 +1262,12 @@ components:
                     - refId: 631c6adac2d4ea73be34f0d1
                       type: ACCESSORY
                   parentVariantId: 545b4e3dfaee4c10def3db24
+                  customerSegmentIds:
+                    - 689591c74ac99162678ae78f
+                    - 689591c74ac99162678ae78g
+                  categoryIds:
+                    - 631c6adac2d4ea73be34f0d4
+                    - 631c6adac2d4ea73be34f0d5
                   mixins:
                     productVariantAttributes:
                       color: RED
@@ -2200,24 +2248,6 @@ components:
           items:
             type: string
           description: 'Collection of label IDs.'
-        customerSegmentIds:
-          type: array
-          description: |-
-            Customer segment IDs assigned to the product.
-
-            **NOTE**: This is a preview field and it is not fully operational yet.
-          readOnly: true
-          items:
-            type: string
-        categoryIds:
-          type: array
-          description: |-
-            Category IDs assigned to the product.
-
-            **NOTE**: This is a preview field and it is not fully operational yet.
-          readOnly: true
-          items:
-            type: string
     basicProduct:
       type: object
       description: Products of the BASIC type.
@@ -2261,6 +2291,16 @@ components:
               $ref: '#/components/schemas/productMedia'
             metadata:
               $ref: '#/components/schemas/productMetadataGet'
+            customerSegmentIds:
+              type: array
+              description: Customer segment IDs assigned to the product.
+              items:
+                type: string
+            categoryIds:
+              type: array
+              description: Category IDs assigned to the product.
+              items:
+                type: string
     basicProductsArray:
       type: array
       description: List of products of the BASIC type.
@@ -2338,6 +2378,16 @@ components:
               $ref: '#/components/schemas/productMedia'
             metadata:
               $ref: '#/components/schemas/productMetadataGet'
+            customerSegmentIds:
+              type: array
+              description: Customer segment IDs assigned to the product.
+              items:
+                type: string
+            categoryIds:
+              type: array
+              description: Category IDs assigned to the product.
+              items:
+                type: string
     bundleProductsArray:
       type: array
       description: List of products of the BUNDLE type.
@@ -2411,6 +2461,16 @@ components:
               $ref: '#/components/schemas/productMedia'
             metadata:
               $ref: '#/components/schemas/productMetadataGet'
+            customerSegmentIds:
+              type: array
+              description: Customer segment IDs assigned to the product.
+              items:
+                type: string
+            categoryIds:
+              type: array
+              description: Category IDs assigned to the product.
+              items:
+                type: string
     parentVariantProductsArray:
       type: array
       description: List of products of the PARENT_VARIANT type.
@@ -2484,6 +2544,16 @@ components:
               $ref: '#/components/schemas/productMedia'
             metadata:
               $ref: '#/components/schemas/variantProductMetadataGet'
+            customerSegmentIds:
+              type: array
+              description: Customer segment IDs assigned to the product.
+              items:
+                type: string
+            categoryIds:
+              type: array
+              description: Category IDs assigned to the product.
+              items:
+                type: string
     variantProductsArray:
       type: array
       description: List of products of the VARIANT type.
